Report des dépôts concernant la mise en squelette des flux RSS (certains des dépots entre [12385] à [12405]). La commande  {{{svn merge }}} a refusé de fonctionner, apparamment parce qu'elle ne sait pas gérer la création de répertoires et/ou le déplacement de fichier. Donc création et copie à la main des différences repérées. Tests semblent ok.
A noter que les deux branches ne sont néanmoins pas égales: les fichiers action/tourner et inc/ajouter_document diffèrent, plus qq fichiers que la doc automatique a traités différrement.

--- a/.gitattributes
+++ b/.gitattributes
@@ -38,6 +38,11 @@ dist/puce.gif -text
 dist/puce_rtl.gif -text
 dist/rechercher.gif -text
 dist/rechercher.png -text
+dist/rss_forum_article.html -text
+dist/rss_forum_breve.html -text
+dist/rss_forum_rubrique.html -text
+dist/rss_forum_syndic.html -text
+dist/rss_forum_thread.html -text
 dist/spip.ico -text
 dist/spip.png -text
 dist/spip_formulaires.css -text
@@ -760,6 +765,17 @@ prive/modeles/text.html -text
 prive/modeles/video.html -text
 prive/puce_prive.gif -text
 prive/puce_prive_rtl.gif -text
+prive/rss.html -text
+prive/rss/a_suivre.html -text
+prive/rss/forums.html -text
+prive/rss/forums_interne.html -text
+prive/rss/forums_prop.html -text
+prive/rss/forums_public.html -text
+prive/rss/forums_spam.html -text
+prive/rss/forums_vide.html -text
+prive/rss/messagerie.html -text
+prive/rss/revisions.html -text
+prive/rss/signatures.html -text
 prive/spip_glossaire.gif -text
 prive/spip_out.gif -text
 prive/spip_style.css -text
